// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow_regression.js 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const bar = (...varargs:any[]) => {
  console.log(varargs);
};

const foo = (x:string):void => (
  bar(
    x,
    () => {},
    () => {}
  )
);

app.get("/", (req, res): void => {
  res.send("Hello world");
});

=====================================output=====================================
const bar = (...varargs: any[]) => {
  console.log(varargs);
};

const foo = (x: string): void =>
  bar(
    x,
    () => {},
    () => {}
  );

app.get("/", (req, res): void => {
  res.send("Hello world");
});

================================================================================
`;

exports[`arrow_regression.js 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
const bar = (...varargs:any[]) => {
  console.log(varargs);
};

const foo = (x:string):void => (
  bar(
    x,
    () => {},
    () => {}
  )
);

app.get("/", (req, res): void => {
  res.send("Hello world");
});

=====================================output=====================================
const bar = (...varargs: any[]) => {
  console.log(varargs)
}

const foo = (x: string): void =>
  bar(
    x,
    () => {},
    () => {}
  )

app.get("/", (req, res): void => {
  res.send("Hello world")
})

================================================================================
`;

exports[`comments.js 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const fn1 = () => {
  return;
} /* foo */;

const fn2 = () => {
  return;
}

// foo
;

=====================================output=====================================
const fn1 = () => {
  return;
}; /* foo */

const fn2 = () => {
  return;
};

// foo

================================================================================
`;

exports[`comments.js 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
const fn1 = () => {
  return;
} /* foo */;

const fn2 = () => {
  return;
}

// foo
;

=====================================output=====================================
const fn1 = () => {
  return
} /* foo */

const fn2 = () => {
  return
}

// foo

================================================================================
`;
